<resources>
    <string name="camera_error_title">Camera error</string>
    <string name="cannot_connect_camera_once">"Can't connect to camera"</string>
    <string name="cannot_connect_camera_twice">"Still can't connect to camera. Try restarting your phone."</string>
    <string name="camera_disabled">Camera has been disabled</string>
    <string name="camera_label">Camera</string>
    <string name="video_camera_label">Video camera</string>
    <string name="wait">Hang on…</string>
    <string name="no_storage">Insert SD card before using camera</string>
    <string name="not_enough_space">SD card is full</string>
    <string name="preparing_sd">Checking SD card…</string>
    <string name="access_sd_fail">"Couldn't access SD card."</string>
    <string name="confirm_restore_title">Restore defaults</string>
    <string name="confirm_restore_message">Restore Camera default settings?</string>
    <string name="confirm_change_mode_title">Switch mode</string>
    <string name="confirm_change_to_expert_mode_message">Switch to advanced mode?</string>
    <string name="confirm_change_to_simple_mode_message">Switch to simple mode?</string>
    <string name="confirm_location_message">Do you want to save location info in your photos?</string>
    <string name="save">Save</string>
    <string name="no_save">"Don't save"</string>
    <string name="review_cancel">Cancel</string>
    <string name="pref_camera_id_default">0</string>
    <string name="pref_camera_recordlocation_title">Store location info</string>
    <string name="pref_camera_recordlocation_default">false</string>
    <string name="pref_camera_recordlocation_entry_off">Off</string>
    <string name="pref_camera_recordlocation_entry_on">On</string>
    <string name="pref_camera_sound_title">Camera sounds</string>
    <string name="pref_camera_sound_entry_off">off</string>
    <string name="pref_camera_sound_entry_on">on</string>
    <string name="pref_camera_auto_focus_title_entry_off">Off</string>
    <string name="pref_camera_auto_focus_title_entry_on">On</string>
    <string name="pref_front_mirror_title">Mirror front camera</string>
    <string name="pref_video_quality_title">Video quality</string>
    <string name="pref_video_quality_default">5</string>
    <string name="pref_video_quality_pad_default">6</string>
    <string name="pref_mtk_video_quality_default">10</string>
    <string name="pref_video_quality_entry_1080p">FULL HD</string>
    <string name="pref_video_quality_entry_720p">HD</string>
    <string name="pref_video_quality_entry_480p">SD</string>
    <string name="pref_video_quality_entry_fwvga">FWVGA</string>
    <string name="pref_video_quality_entry_wvga">WVGA</string>
    <string name="pref_video_quality_entry_vga">VGA</string>
    <string name="pref_video_quality_entry_wqvga">WQVGA</string>
    <string name="pref_video_time_lapse_frame_interval_title">Time lapse interval</string>
    <string name="pref_video_time_lapse_frame_interval_default">120</string>
    <string name="pref_video_time_lapse_frame_interval_entry_2">Interval of 0.06 seconds (2 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_4">Interval of 0.12 seconds (4 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_10">Interval of 0.3 seconds (10 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_30">Interval of 1 second (30 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_60">Interval of 2 seconds (60 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_90">Interval of 3 seconds (90 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_120">Interval of 4 seconds (120 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_150">Interval of 5 seconds (150 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_240">Interval of 8 seconds (240 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_300">Interval of 10 seconds (300 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_450">Interval of 15 seconds (450 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_900">Interval of 30 seconds (900 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_1800">Interval of 60 seconds (1800 times)</string>
    <string name="pref_camera_settings_category">Camera settings</string>
    <string name="pref_camcorder_settings_category">Camera settings</string>
    <string name="pref_camera_picturesize_title">Picture size</string>
    <string name="pref_camera_picturesize_title_simple_mode">Camera frame</string>
    <string name="pref_camera_picturesize_entry_standard">Standard 4:3</string>
    <string name="pref_camera_picturesize_entry_fullscreen">Full screen 16:9</string>
    <string name="pref_camera_picturesize_entry_4208x3120">13M(4208x3120)</string>
    <string name="pref_camera_picturesize_entry_4208x2368">10M(4208x2368)</string>
    <string name="pref_camera_picturesize_entry_3264x2448">8M(3264x2448)</string>
    <string name="pref_camera_picturesize_entry_3200x2400">8M(3200x2400)</string>
    <string name="pref_camera_picturesize_entry_3328x1872">6M(3328x1872)</string>
    <string name="pref_camera_picturesize_entry_3264x1840">6M(3264x1840)</string>
    <string name="pref_camera_picturesize_entry_3200x1800">6M(3200x1800)</string>
    <string name="pref_camera_picturesize_entry_3264x1836">6M(3264x1836)</string>
    <string name="pref_camera_picturesize_entry_2592x1936">5M(2592x1936)</string>
    <string name="pref_camera_picturesize_entry_2592x1456">4M(2592x1456)</string>
    <string name="pref_camera_picturesize_entry_2592x1944">5M(2592x1944)</string>
    <string name="pref_camera_picturesize_entry_2048x1536">3M(2048x1536)</string>
    <string name="pref_camera_picturesize_entry_1920x1088">2M(1920x1088)</string>
    <string name="pref_camera_picturesize_entry_1920x1080">2M(1920x1080)</string>
    <string name="pref_camera_picturesize_entry_1600x1200">2M(1600x1200)</string>
    <string name="pref_camera_picturesize_entry_1472x1104">1.6M(1472x1104)</string>
    <string name="pref_camera_picturesize_entry_1440x1080">1.6M(1440x1080)</string>
    <string name="pref_camera_picturesize_entry_1280x960">1.3M(1280x960)</string>
    <string name="pref_camera_picturesize_entry_1440x816">1.2M(1440x816)</string>
    <string name="pref_camera_picturesize_entry_1472x832">1.2M(1472x832)</string>
    <string name="pref_camera_picturesize_entry_1280x720">0.9M(1280x720)</string>
    <string name="pref_camera_picturesize_entry_1024x768">0.8M(1024x768)</string>
    <string name="pref_camera_jpegquality_default">normal</string>
    <string name="pref_camera_picture_format_default">jpeg</string>
    <string name="pref_camera_picture_format_title">Select picture format</string>
    <string name="pref_camera_picture_format_entry_jpeg">Jpeg</string>
    <string name="pref_camera_picture_format_entry_raw">Raw</string>
    <string name="pref_camera_picture_format_value_jpeg">jpeg</string>
    <string name="pref_camera_picture_format_value_raw">raw</string>
    <string name="pref_camera_jpegquality_title">Picture quality</string>
    <string name="pref_camera_jpegquality_entry_high">High</string>
    <string name="pref_camera_jpegquality_entry_normal">Standard</string>
    <string name="pref_camera_jpegquality_entry_low">Low</string>
    <string name="pref_camera_histogram_default">disable</string>
    <string name="pref_camera_histogram_title">Histogram</string>
    <string name="pref_camera_histogram_entry_enable">Enable</string>
    <string name="pref_camera_histogram_entry_disable">Disable</string>
    <string name="pref_camera_histogram_value_enable">enable</string>
    <string name="pref_camera_histogram_value_disable">disable</string>
    <string name="pref_camera_focusmode_title">Focus mode</string>
    <string name="pref_camera_focusmode_entry_auto">Auto</string>
    <string name="pref_camera_focusmode_entry_normal">Standard</string>
    <string name="pref_camera_focusmode_entry_infinity">Infinity</string>
    <string name="pref_camera_focusmode_entry_macro">Macro</string>
    <string name="pref_camera_focusmode_entry_continuous">CAF</string>
    <string name="pref_camera_focusmode_entry_manual">Manual</string>
    <string name="pref_camera_focusmode_entry_lock">Lock</string>
    <string name="pref_video_focusmode_title">Focus mode</string>
    <string name="pref_video_focusmode_entry_continuous">CAF</string>
    <string name="pref_video_focusmode_entry_auto">Tap</string>
    <string name="pref_video_focusmode_entryvalue_default">auto</string>
    <string name="pref_camera_focusmode_value_default">continuous-picture</string>
    <string name="pref_camera_flashmode_default">auto</string>
    <string name="pref_camera_skin_beautify_default">off</string>
    <string name="pref_camera_flashmode_title">Flash mode</string>
    <string name="pref_camera_flashmode_entry_auto">Auto</string>
    <string name="pref_camera_flashmode_entry_on">On</string>
    <string name="pref_camera_flashmode_entry_off">Off</string>
    <string name="pref_camera_shader_coloreffect_default">-1</string>
    <string name="pref_camera_coloreffect_title">Filters</string>
    <string name="pref_camera_antibanding_title">Anti banding</string>
    <string name="pref_camera_antibanding_default">50hz</string>
    <string name="accessibility_shutter_button">Shutter button</string>
    <string name="accessibility_review_thumbnail">Most recent photo</string>
    <string name="accessibility_camera_picker">Front and back camera switch</string>
    <string name="pref_camera_audio_capture_title">Audio</string>
    <string name="pref_audio_indicator_entryvalue_default">off</string>
    <string name="pref_camera_settings_title">Settings</string>
    <string name="pref_camera_referenceline_title">Reference line</string>
    <string name="pref_camera_volumekey_function_title">Volume key functions</string>
    <string name="pref_camera_volumekey_function_default">shutter</string>
    <string name="send">Send</string>
    <string name="Import">Import</string>
    <string name="delete">Delete</string>
    <string name="slideshow">Slideshow</string>
    <string name="edit">Edit</string>
    <string name="rotate_left">Rotate left</string>
    <string name="rotate_right">Rotate right</string>
    <string name="set_image">Set picture as</string>
    <string name="details">Details</string>
    <string name="show_on_map">Show on map</string>
    <string name="contact_name">Name</string>
    <string name="contact_nickname">Nickname</string>
    <string name="contact_company">Company</string>
    <string name="contact_title">Title</string>
    <string name="contact_phone">Phone</string>
    <string name="contact_email">Email</string>
    <string name="contact_web">Web</string>
    <string name="contact_address">Address</string>
    <string name="contact_birthday">Birthday</string>
    <string name="contact_note">Note</string>
    <string name="pref_camera_watermark_title">Time watermark</string>
    <string name="accessibility_flash_mode_button">FlashButton</string>
    <string name="accessibility_module_picker">ModulePicker</string>
    <string name="accessibility_setting_button">SettingButton</string>
    <string name="accessibility_coloreffect_button">ColorEffectButton</string>
    <string name="pref_camera_show_gender_age_title">Face recognition</string>
    <string name="pref_camera_show_gender_age_default">on</string>
    <string name="pref_camera_multiple_face_beauty_title">Enhance skin tones</string>
    <string name="pref_face_beauty_title">Skin tones</string>
    <string name="pref_face_beauty_default">i:0</string>
    <string name="pref_camera_multiple_face_beauty_default">on</string>
    <string name="pref_priority_storage_title">Priority saved to external SD card</string>
</resources>