<?xml version="1.0" encoding="utf-8"?>
<com.android.camera.ui.V6CameraBottomControlPanel android:id="@id/v6_camera_bottom_control_panel" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_centerVertical="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.android.camera.ui.V6ThumbnailButton android:id="@id/v6_thumbnail_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/v6_bottom_control_padding" android:layout_centerVertical="true">
        <com.android.camera.ui.RotateImageView android:id="@id/v6_thumbnail_background" android:background="@drawable/v6_thumbnail_button_bg" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:scaleType="center" android:layout_centerInParent="true" android:contentDescription="@string/accessibility_review_thumbnail" />
        <com.android.camera.ui.RotateImageView android:id="@id/v6_thumbnail_image" android:visibility="gone" android:clickable="false" android:layout_width="1.0dip" android:layout_height="1.0dip" android:scaleType="center" android:layout_centerInParent="true" android:contentDescription="@string/accessibility_review_thumbnail" />
    </com.android.camera.ui.V6ThumbnailButton>
    <com.android.camera.ui.V6ShutterButton android:id="@id/v6_shutter_button" android:layout_width="@dimen/v6_shutter_button_width" android:layout_height="@dimen/v6_shutter_button_width" android:layout_centerInParent="true">
        <com.android.camera.ui.V6ShutterButtonAudioSound android:id="@id/v6_shutter_button_audio_sound" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_centerInParent="true" android:contentDescription="@string/accessibility_shutter_button" />
        <com.android.camera.ui.V6ShutterButtonInternal android:id="@id/v6_shutter_button_internal" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/v6_camera_shutter_button_bg" android:scaleType="center" android:layout_centerInParent="true" android:contentDescription="@string/accessibility_shutter_button" />
    </com.android.camera.ui.V6ShutterButton>
    <com.android.camera.ui.V6ModulePicker android:id="@id/v6_module_picker" android:clickable="true" android:layout_marginRight="@dimen/v6_bottom_control_padding" android:src="@drawable/v6_camera_module_picker_bg" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:contentDescription="@string/accessibility_module_picker" style="@style/RotateImageViewStyle" />
</com.android.camera.ui.V6CameraBottomControlPanel>